--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ Build-Depends:
  po-debconf
 Standards-Version: 4.6.2
 Rules-Requires-Root: no
-Vcs-Git: https://salsa.debian.org/debian/mdadm.git -b debian/master
-Vcs-Browser: https://salsa.debian.org/debian/mdadm
+Vcs-Browser: https://git.progress-linux.org/users/daniel.baumann/debian/packages/mdadm
+Vcs-Git: https://git.progress-linux.org/users/daniel.baumann/debian/packages/mdadm
 Homepage: https://raid.wiki.kernel.org/index.php/Linux_Raid
 
 Package: mdadm
