--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Standards-Version: 4.6.2
 Rules-Requires-Root: no
 Vcs-Browser: https://git.progress-linux.org/users/daniel.baumann/debian/packages/mdadm
 Vcs-Git: https://git.progress-linux.org/users/daniel.baumann/debian/packages/mdadm
-Homepage: https://raid.wiki.kernel.org/index.php/Linux_Raid
+Homepage: https://raid.wiki.kernel.org
 
 Package: mdadm
 Architecture: linux-any
