Removing obsolete alternative depends on module-init-tools.
Signed-off-by: Daniel Baumann <daniel.baumann@progress-linux.org>

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Depends:
  ${misc:Depends},
  ${shlibs:Depends},
 Recommends:
- kmod | module-init-tools,
+ kmod,
  ${mta:Recommends},
 Suggests:
  ${mta:Suggests},
