Adding upstream version 4.2+20230223.
Signed-off-by: Daniel Baumann <daniel.baumann@progress-linux.org>

--- a/systemd/mdadm-grow-continue@.service
+++ b/systemd/mdadm-grow-continue@.service
@@ -8,6 +8,7 @@
 [Unit]
 Description=Manage MD Reshape on /dev/%I
 DefaultDependencies=no
+Documentation=man:mdadm(8)
 
 [Service]
 ExecStart=BINDIR/mdadm --grow --continue /dev/%I
