Adding debconf note when run on non-systemd systems (Closes: #1037496).
Signed-off-by: Daniel Baumann <daniel.baumann@progress-linux.org>

--- a/debian/mdadm.config
+++ b/debian/mdadm.config
@@ -32,6 +32,19 @@ fi
 
 db_capb escape
 
+# if system has root on md
+if findmnt / 2>/dev/null | grep -qs \/dev\/md && \
+# and system is not a container
+! grep -qs ':cpuset:/$' /proc/1/cgroup && \
+# and system is not a chroot
+[ "$(stat -c %d/%i /)" != "$(stat -Lc %d/%i /proc/1/root 2>/dev/null)" ] && \
+# and systemd is not running
+[ -z "$(pidof systemd)" ]
+then
+	db_input high mdadm/init-system-not-systemd || true
+	db_go
+fi
+
 db_input medium mdadm/autocheck || :
 db_go
 
