--- a/debian/rules
+++ b/debian/rules
@@ -32,10 +32,10 @@ execute_after_dh_auto_clean:
 		rm -f "$$(dirname "$${file}")"/"$$(basename "$${file}" .in)"; \
 	done
 
-override_dh_install:
+execute_before_dh_install:
 	$(MAKE) install-systemd DESTDIR=$(CURDIR)/debian/tmp
-	dh_install
 
+execute_after_dh_install:
 	mkdir -p $(CURDIR)/debian/mdadm/etc/mdadm
 	chmod +x $(CURDIR)/debian/mdadm/usr/share/mdadm/mdcheck
 
