Fix chroot detection to avoid displaying the systemd note when mdadm is getting installed within d-i (Closes: #1091617).
Signed-off-by: Daniel Baumann <daniel.baumann@progress-linux.org>

--- a/debian/mdadm.config
+++ b/debian/mdadm.config
@@ -37,7 +37,7 @@ if findmnt / 2>/dev/null | grep -qs \/dev\/md && \
 # and system is not a container
 ! grep -qs ':cpuset:/$' /proc/1/cgroup && \
 # and system is not a chroot
-[ "$(stat -c %d/%i /)" != "$(stat -Lc %d/%i /proc/1/root 2>/dev/null)" ] && \
+[ "$(stat -c %d/%i /)" = "$(stat -Lc %d/%i /proc/1/root 2>/dev/null)" ] && \
 # and systemd is not running
 [ -z "$(pidof systemd)" ]
 then
