--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Build-Depends:
 Rules-Requires-Root: no
 Standards-Version: 4.7.0
 Homepage: https://raid.wiki.kernel.org
-Vcs-Browser: https://git.progress-linux.org/users/daniel.baumann/debian/packages/mdadm
-Vcs-Git: https://git.progress-linux.org/users/daniel.baumann/debian/packages/mdadm
+Vcs-Browser: https://forgejo.debian.net/linux/mdadm
+Vcs-Git: https://forgejo.debian.net/linux/mdadm
 
 Package: mdadm
 Section: admin
