Fix autopkgtests without systemd: add missing dependencies, ensure loop devices exist, set environment manually.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -2,5 +2,8 @@ Tests: test-installed
 Restrictions: needs-root, isolation-machine
 Depends:
  fdisk,
+ kmod,
  mdadm,
+ mount,
+ selinux-utils,
  udev,
