Revert "d/control: B-D libeudev-dev and specify SYSTEMD_DIR manually."
This reverts commit 6447d97ac689a728ca768a87460cfe15791f30ff. Both systemd-dev
and libeudev-dev are coinstallable again.

--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,9 @@ Priority: optional
 Maintainer: Mark Hindley <mark@hindley.org.uk>
 Build-Depends:
  debhelper-compat (= 13),
- libeudev-dev,
+ libudev-dev,
  pkgconf,
+ systemd-dev,
 Rules-Requires-Root: no
 Standards-Version: 4.7.2
 Homepage: https://github.com/md-raid-utilities/mdadm
