--- a/debian/rules
+++ b/debian/rules
@@ -25,10 +25,9 @@ execute_after_dh_auto_clean:
 		rm -f "$$(dirname "$${file}")"/"$$(basename "$${file}" .in)"; \
 	done
 
-execute_before_dh_install:
+override_dh_install:
 	$(MAKE) install-systemd DESTDIR=$(CURDIR)/debian/tmp
-
-execute_after_dh_install:
+	dh_install
 	mkdir -p $(CURDIR)/debian/mdadm/etc/mdadm
 	chmod +x $(CURDIR)/debian/mdadm/usr/share/mdadm/mdcheck
 
