--- a/debian/rules
+++ b/debian/rules
@@ -27,6 +27,7 @@ override_dh_auto_build: .pc/applied-patches
 	dh $@
 
 override_dh_auto_clean:
+	quilt pop -a
 	dh_auto_clean
 	# remove generated files
 	for file in $$(find . -type f -name "*.in"); \
