--- a/debian/rules
+++ b/debian/rules
@@ -20,14 +20,19 @@ PATCHES=debian/patches
 .pc/applied-patches:
 	QUILT_PATCHES=$(PATCHES) quilt push -a
 
-override_dh_auto_build: .pc/applied-patches
+patch: .pc/applied-patches
+	:
+
+unpatch:
+	quilt pop -a
+
+override_dh_auto_build: patch
 	dh_auto_build
 
 %:
 	dh $@
 
-override_dh_auto_clean:
-	quilt pop -a
+override_dh_auto_clean: unpatch
 	dh_auto_clean
 	# remove generated files
 	for file in $$(find . -type f -name "*.in"); \
